# RGBControl

./: CMakeLists.txt  README.md  RGBControl_pt_PT.ts  main.cpp  rgbcontrol.cpp  rgbcontrol.h  rgbcontrol.ui
